--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.13.0",
     "framer-motion": "^11.3.30",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
